packages/aces-amf-lib/tests/Generated_Samples_AMF/invalid_AMFs/invalid_15_missing_system_version.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>Invalid: Missing system version</aces:description>
        <aces:author>
            <aces:name>Recipe System</aces:name>
            <aces:emailAddress>recipes@example.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:50Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:50Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:008534e0-c1c0-453e-91d4-3d5081cc7598</aces:uuid>
    </aces:amfInfo>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>Pipeline without system version</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:50Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:50Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:94fe319b-d597-48ad-8dba-34b184304150</aces:uuid>
        </aces:pipelineInfo>
        <aces:inputTransform applied="true">
            <aces:description>Input transform</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v2.0:Input.ARRI.Alexa-v3-logC-EI800.a1.v2</aces:transformId>
        </aces:inputTransform>
        <aces:outputTransform applied="true">
            <aces:description>Output transform</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v2.0:Output.Rec709.Rec1886.a1.v1</aces:transformId>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
